--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 venv
 .venv
 .env
+tests/__pycache__
+./__pycache__
+__pycache__
+playwright_test.py
+*.png
+ziauddin_page.html
+ziauddin_test.html
